# OTRv4Plus

./: .gitignore  AUDIT_HANDOFF.md  CHANGELOG.md  CHANGES.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DEVELOPMENT.mb  DEVELOPMENT.md  FEATURES.md  MIGRATION.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  WHY.md  build_ed448.sh  build_sanitized.sh  conftest.py  otrv4+.py  otrv4_.py  otrv4_testlib.py  otrv4plus.py  otrv4plus_tui.py  otrv4plus_xmpp.py  prebuit  setup_otr4.py  smp_engine_compat.py  termux_install.sh  test_attacks.py  test_final_boss.py  test_harness_audit.py  test_master_protocol_verifier.py  test_mldsa_smoke.py  test_rust_security.py  test_state_fork_attack.py  test_vectors.rs  weechat_otrv4plus.py
.attic/: otrv4plus-1.py
Rust/: Cargo.toml  README.md  audit.toml  build.sh  dake.rs  pyproject.toml
Rust/src/: Cargo.toml  SECURITY.md  aead.rs  dake.rs  error.rs  header.rs  kdf.rs  key_handles.rs  lib.rs  mldsa.rs  mlkem.rs  ratchet.rs  ring_sig.rs  secure_mem.rs  smp.rs  smp_vault.rs  test_vectors.rs
c_ext/: otr4_crypto_ext.c  otr4_ed448_ct.c  otr4_mldsa_ext.c
prebuilt/: README.md  prebuilt_README.md
tests/: conftest.py  fuzz_harnesses.py  otrv4+.py  otrv4_testlib.py  test_attacks.py  test_differential.py  test_harness_audit.py  test_mlkem_kat.py  test_otr.py  test_otrv4_integration.py  test_property.py  test_ratchet_torture.py  test_ring_android.py  test_rust_security_adversarial.py  test_v10_4_security_fixes.py
