[package]
name        = "otrv4_core"
version     = "0.5.1"
edition     = "2021"
authors     = ["OTRv4+ contributors"]
description = "Post-quantum OTRv4 cryptographic core — Rust/PyO3"
license     = "GPL-3.0"

[lib]
name       = "otrv4_core"
crate-type = ["cdylib"]

[features]
default  = ["pyo3/extension-module", "pq-rust"]
pq-rust  = [
    "num-bigint",
    "num-traits",
    "lazy_static",
    "pqcrypto-kyber",
    "pqcrypto-mldsa",
    "pqcrypto-traits",
    "x448",
    "getrandom",
    "ed448-goldilocks-plus",
]

[dependencies]
pyo3         = { version = "0.21", features = ["extension-module", "abi3-py39"] }
zeroize      = { version = "1.8",  features = ["derive", "alloc"] }
aes-gcm      = { version = "0.10", features = ["aes"] }
sha3         = { version = "0.10" }
hmac         = { version = "0.12" }
subtle       = { version = "2.5"  }
rand_core    = { version = "0.6"  }
rand         = { version = "0.8"  }
dashmap      = { version = "5.5"  }
thiserror    = { version = "1.0"  }
libc         = { version = "0.2"  }        # mlock / munlock

# Optional — pq-rust feature gate
num-bigint    = { version = "0.4",  optional = true, features = ["rand"] }
num-traits    = { version = "0.2",  optional = true }
lazy_static   = { version = "1.5",  optional = true }
getrandom     = { version = "0.2",  optional = true }
x448          = { version = "0.6",  optional = true }

pqcrypto-kyber  = { version = "0.8",   optional = true }
pqcrypto-mldsa  = { version = "0.1.2", optional = true }
pqcrypto-traits = { version = "0.3",   optional = true }

ed448-goldilocks-plus = {
    version          = "0.16",
    optional         = true,
    default-features = false,
    features         = ["alloc"],
}

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
panic           = "abort"      # no unwinding — ZeroizeOnDrop still fires
overflow-checks = true

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true
