[package]
name = "otrv4_core"
version = "0.10.6"
edition = "2021"
description = "OTRv4+ post-quantum cryptographic core (Rust)"
license = "GPL-3.0-or-later"

[lib]
name = "otrv4_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["pq-rust"]
pq-rust = []
# Test-only: exposes kdf_1 and encode_header to Python.
# DO NOT enable in production (--features pq-rust only).
test-only-kdf = []

[dependencies]
pyo3        = { version = "0.21", features = ["extension-module", "abi3-py39"] }
zeroize     = { version = "1.8", features = ["derive"] }
subtle      = "2.5"
rand        = { version = "0.8", features = ["std"] }
sha3        = "0.10"
hmac        = "0.12"
aes-gcm     = "0.10"
num-bigint  = { version = "0.4", features = ["rand"] }
num-traits  = "0.2"
num-integer = "0.1"
hex         = "0.4"
thiserror   = "1.0"
lazy_static = "1.5"
getrandom   = "0.2"
x448        = "0.6"

# Post-quantum
pqcrypto-kyber  = "0.8"
pqcrypto-mldsa  = "0.1"
pqcrypto-traits = "0.3"

# Classical Ed448
ed448-goldilocks-plus = "0.16"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "unwind"
strip         = true
debug         = false
overflow-checks = true
