[package]
name        = "otrv4_core"
version     = "0.10.21"
edition     = "2021"
authors     = ["OTRv4+ contributors"]
description = "Post-quantum OTRv4 cryptographic core (Rust/PyO3)"
license     = "GPL-3.0"

[lib]
name       = "otrv4_core"
crate-type = ["cdylib"]

[features]
default  = ["pyo3/extension-module", "pq-rust"]
pq-rust  = [
    "num-bigint",
    "num-traits",
    "crypto-bigint",
    "pqcrypto-mlkem",
    "pqcrypto-mldsa",
    "pqcrypto-traits",
    "x448",
    "getrandom",
    "ed448-goldilocks-plus",
]
# v10.6.18.1: declared so rustc stops emitting unexpected_cfgs warnings
# for the #[cfg(feature = "test-only-kdf")] blocks in kdf.rs, header.rs,
# and smp_vault.rs.  These blocks expose PyO3 entry points to crate
# internals (raw KDF, ratchet header encoder, vault secret read-back)
# that are NEVER safe in a production build — they would let Python
# extract SMP secrets from the vault, breaking the security boundary
# the gates enforce.  The feature is OFF by default and is opted-in
# only for Python-side internals tests via:
#   cargo build --release --features pq-rust,test-only-kdf
# Do not add this to `default` or `pq-rust`.
test-only-kdf = []

[dependencies]
pyo3         = { version = "0.21", features = ["extension-module", "abi3-py39"] }
zeroize      = { version = "1.8",  features = ["derive", "alloc"] }
aes-gcm      = { version = "0.10", features = ["aes"] }
sha3         = { version = "0.10" }
hmac         = { version = "0.12" }
subtle       = { version = "2.5"  }
rand_core    = { version = "0.6"  }
rand         = { version = "0.8"  }
dashmap      = { version = "5.5"  }
thiserror    = { version = "1.0"  }
libc         = { version = "0.2"  }

# Optional, gated by the pq-rust feature.
# v10.6.14: lazy_static (1.5) removed; SMP constants migrated to
#          std::sync::LazyLock (stabilised Rust 1.80).  MSRV is 1.80+.
# v10.6.16: pqcrypto-kyber (round-3 Kyber) replaced by pqcrypto-mlkem
#          (FIPS 203 ML-KEM-1024).  API is drop-in compatible; wire
#          format differs in domain-separator constants.
num-bigint    = { version = "0.4",   optional = true, features = ["rand"] }
num-traits    = { version = "0.2",   optional = true }
# v10.7.6 (Phase 5.4): constant-time modular exponentiation for SMP.
# Already present transitively (pulled in by the pqcrypto stack); promoted to
# a direct dependency here.  0.5.x is the version already resolved in the
# tree, so this adds no new compile.  DynResidue gives constant-time modpow,
# closing the num-bigint modpow timing side-channel in the SMP ZKPs.
crypto-bigint = { version = "0.5",   optional = true }
getrandom     = { version = "0.2",   optional = true }
x448          = { version = "0.6",   optional = true }

pqcrypto-mlkem  = { version = "0.1.1", optional = true, default-features = false, features = ["std"] }
pqcrypto-mldsa  = { version = "0.1.2", optional = true, default-features = false, features = ["std"] }
pqcrypto-traits = { version = "0.3",   optional = true }

ed448-goldilocks-plus = {
    version          = "0.16",
    optional         = true,
    default-features = false,
    features         = ["alloc", "signing", "pkcs8"],
}

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
panic           = "abort"
overflow-checks = true

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true
