[package]
name        = "otrv4_core"
version     = "0.5.0"
edition     = "2021"
authors     = ["OTRv4+ contributors"]
description = "Post-quantum OTRv4 cryptographic core — Rust/PyO3"
license     = "GPL-3.0"

[lib]
name       = "otrv4_core"
crate-type = ["cdylib"]

[features]
default  = ["pyo3/extension-module"]
pq-rust  = ["num-bigint", "num-traits", "lazy_static",
            "ml-kem", "ml-dsa", "ed448-goldilocks"]

[dependencies]
pyo3         = { version = "0.21", features = ["extension-module", "abi3-py39"] }
zeroize      = { version = "1.8",  features = ["derive", "alloc"] }
aes-gcm      = { version = "0.10", features = ["aes"] }
sha3         = { version = "0.10" }
hmac         = { version = "0.12" }
subtle       = { version = "2.5"  }
rand_core    = { version = "0.6"  }
rand         = { version = "0.8"  }
dashmap      = { version = "5.5"  }
thiserror    = { version = "1.0"  }
signature    = { version = "2.2"  }

# Phase-2 — optional, only with --features pq-rust
num-bigint       = { version = "0.4",           optional = true }
num-traits       = { version = "0.2",           optional = true }
lazy_static      = { version = "1.5",           optional = true }
ml-kem           = { version = "0.3",           features = ["mlkem1024"],   optional = true }
ml-dsa           = { version = "=0.1.0-rc.8",  features = ["ml-dsa-87"],   optional = true }
ed448-goldilocks = { version = "=0.14.0-pre.12", features = ["x448"],       optional = true }

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
panic           = "abort"
overflow-checks = true

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true
